--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Kevin Koehncke</h1>
-            <a href="~/Dropbox/Business/Kevin_Koehncke_Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Kevin_Koehncke_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
