--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <img id="lead-image", src="images/Kevin_Koehncke.jpg" />
+            <img id="lead-image", src="images/Kevin_Koehncke.JPG" />
             <h1>Kevin Koehncke</h1>
             <a href="Kevin_Koehncke_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
