--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             <li>Keras</li>
             <li>TensorFlow</li>
             <li>Machine Learning</li>
+            <li>Data Science</li>
+            <li>Scikit Learn</li>
             <li>SQL</li>
             <li>R</li>
             <li>Java</li>
